--- a/docroot/modules/custom/bos_components/modules/bos_search/css/bos_search.css
+++ b/docroot/modules/custom/bos_components/modules/bos_search/css/bos_search.css
@@ -20,12 +20,9 @@
   font-family: 'Lora', 'Georgia', serif;
   font-size: 16px;
   line-height: 26px;
+  letter-spacing: 0.5px;
   padding: 0;
   margin: 0;
-  /* display: flex; */
-  /* justify-content: center; */
-  /* align-items: center; */
-  /* height: 100vh; */
 }
 /**
  * MODAL DIALOG WINDOW
