--- a/docroot/modules/custom/bos_components/modules/bos_search/css/disclaimer.css
+++ b/docroot/modules/custom/bos_components/modules/bos_search/css/disclaimer.css
@@ -2,6 +2,7 @@
   font-family: 'Lora', 'Georgia', serif;
   font-size: 16px;
   line-height: 26px;
+  letter-spacing: 0.5px;
   color: #58585b;
   padding: 68px 32px 42px 32px;
   border-radius: 2px;
